--- a/authors.html
+++ b/authors.html
@@ -12,12 +12,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">雷克斯獨處室</a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on 雷克斯獨處室</h1>
     <ul>
+        <li><a href="/author/rex-cheng.html">rex cheng</a> (1)</li>
     </ul>
 </section>
 
