--- a/categories.html
+++ b/categories.html
@@ -12,10 +12,12 @@
         <header id="banner" class="body">
                 <h1><a href="/">雷克斯獨處室</a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on 雷克斯獨處室</h1>
     <ul>
+        <li><a href="/category/misc.html">misc</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
