--- a/tags.html
+++ b/tags.html
@@ -12,6 +12,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">雷克斯獨處室</a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
