--- a/authors.html
+++ b/authors.html
@@ -12,7 +12,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">雷克斯獨處室</a></h1>
                 <nav><ul>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/category/ce-shi.html">測試</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
