--- a/archives.html
+++ b/archives.html
@@ -12,15 +12,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">雷克斯獨處室</a></h1>
                 <nav><ul>
-                    <li><a href="/category/ce-shi.html">測試</a></li>
+                    <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for 雷克斯獨處室</h1>
 
 <dl>
-    <dt>四 30 9月 2021</dt>
-    <dd><a href="/ce-shi-wen-zhang.html">測試文章</a></dd>
+    <dt>五 03 12月 2010</dt>
+    <dd><a href="/my-super-post.html">My super title</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
