--- a/tags.html
+++ b/tags.html
@@ -12,14 +12,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">雷克斯獨處室</a></h1>
                 <nav><ul>
-                    <li><a href="/category/ce-shi.html">測試</a></li>
+                    <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for 雷克斯獨處室</h1>
     <ul>
-        <li><a href="/tag/ce-shi.html">測試</a> (1)</li>
+        <li><a href="/tag/pelican.html">pelican</a> (1)</li>
+        <li><a href="/tag/publishing.html">publishing</a> (1)</li>
     </ul>
 </section>
 
